# archv

./: .gitignore  CMakeLists.txt  Makefile  ManyServlets.java  README.md  archv-test.cpp  archv-test.h  bruteForceMatch.cpp  calibrate.cpp  compare2images.cpp  contours2.cpp  detectimages.cpp  dictionary.cpp  drawMatches.cpp  helper.cpp  helper.h  histograms.cpp  homogrophy.cpp  imageDocument.cpp  imageDocument.h  imgextract.cpp  imgextract.h  makeContourDictionary.cpp  makeContourDictionary.h  makeContourImages.cpp  makeContourImages.h  makeDictionary.cpp  makeDictionary.h  makeFilelistUtility.cpp  makeThumbnailsUtility.cpp  makeWordHistograms.cpp  makeWordHistograms.h  matching_to_many_images.cpp  mser_sample.cpp  multi.cpp  param  param2  peopledetect.cpp  processImages.cpp  scanDatabase.cpp  (+6 more)
Debug/: makefile  sources.mk  subdir.mk
